Documentation and namespace tweaks for package, passes check without errors or warnings

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,3 +2,8 @@
 create.R$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^R/ImportSolexa\.R$
+^R/beads_batch\.R$
+^inst/tests/advanced_test\.sh$
+^inst/tests/advanced_tests\.R$
+^man/beads_batch\.Rd$
