--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
-# Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
+language: r
+sudo: required
 
-language: objective-c
+bioc_required: true
+bioc_packages:
+  - BiocCheck
+r_packages:
+  - covr
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh bioc_install IRanges BSgenome Rsamtools rtracklayer GenomicRanges Biostrings
-  - ./travis-tool.sh install_deps
-
-script: ./travis-tool.sh run_tests
-
-on_failure:
-  - ./travis-tool.sh dump_logs
+after_script:
+  - ls -lah
+  - FILE=$(ls -1t *.tar.gz | head -n 1)
+  - Rscript -e "library(BiocCheck); BiocCheck(\"${FILE}\")"
+  
+after_success:
+  - Rscript -e 'covr::codecov()'
 
 notifications:
   email:
