S4Vector added to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ import(GenomeInfoDb)
 import(GenomicRanges)
 import(IRanges)
 import(Rsamtools)
+import(S4Vectors)
 import(digest)
 import(methods)
 import(rtracklayer)
