DESCRIPTION clean up

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,28 @@
+Type: Package
 Package: rbeads
 Title: R implementation of Bias Elimination Algorithm for Deep Sequencing
 Version: 0.3.2
-Author: Przemyslaw Stempor <ps562@cam.ac.uk>
+Date: 2014-04-14
+Authors@R:
+    person(given = "Przemyslaw",
+           family = "Stempor",
+           role = c("aut", "cph", "cre"),
+           email = "ps562@cam.ac.uk")
 Maintainer: Przemyslaw Stempor <ps562@cam.ac.uk>
 Description: BEADS is a normalization scheme that corrects nucleotide
     composition bias, mappability variations and differential local DNA
-    structural effects in deep sequencing data. In high-throughput sequencing
-    data, the recovery of sequenced DNA fragments is not uniform along the
-    genome. In particular, GC-rich sequences are often over-represented and
-    AT-rich sequences under-represented in sequencing data. In addition, the
-    read mapping procedure also generates regional bias. Sequence reads that
-    can be mapped to multiple sites in the genome are usually discarded.
-    Genomic regions with high degeneracy therefore show lower mapped read
-    coverage than unique portions of the genome. Mappability varies along the
-    genome and thus creates systematic bias. Futhermore, local DNA or chromatin
-    structural effects can lead to coverage inhomogeneity of sequencing data.
+    structural effects in deep sequencing data. In high-throughput
+    sequencing data, the recovery of sequenced DNA fragments is not
+    uniform along the genome. In particular, GC-rich sequences are often
+    over-represented and AT-rich sequences under-represented in sequencing
+    data. In addition, the read mapping procedure also generates regional
+    bias. Sequence reads that can be mapped to multiple sites in the
+    genome are usually discarded.  Genomic regions with high degeneracy
+    therefore show lower mapped read coverage than unique portions of the
+    genome. Mappability varies along the genome and thus creates
+    systematic bias. Futhermore, local DNA or chromatin structural effects
+    can lead to coverage inhomogeneity of sequencing data.
+License: LGPL
 Depends:
     R (>= 3.1.0)
 Imports:
@@ -28,10 +36,9 @@ Imports:
     Biostrings,
     GenomeInfoDb,
     S4Vectors
-License: LGPL
-LazyData: true
-Type: Package
-Date: 2014-04-14
 Suggests:
     testthat
+LazyData: true
 RoxygenNote: 6.0.1
+URL: https://github.com/Przemol/rbeads
+BugReports: https://github.com/Przemol/rbeads/issues
